add smooth scroll and animation

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "aos": "^2.3.4",
+    "lenis": "^1.2.3",
     "live-server": "^1.2.2",
     "swiper": "^11.2.5"
   }
